--- a/scss/base/_animations.scss
+++ b/scss/base/_animations.scss
@@ -37,3 +37,10 @@
     transition: all 0.4s ease-in-out;
     background-color: $color-secundario-dark;
 }
+
+/*Enlaces de redes sociales*/
+%animation-a {
+    color: inherit;
+    text-decoration: none;
+    text-underline-offset: 2px;
+} 
