--- a/scss/base/_especiales.scss
+++ b/scss/base/_especiales.scss
@@ -3,24 +3,17 @@
 a {
     color: $color-fuente;
     text-decoration: none;
+
+    &:hover {
+        @extend %animation-a
+    }
 }
 
-a:hover {
-    color: inherit;
-    text-decoration: none;
-    text-underline-offset: 2px;
-}
 
 .collapse {
     display: flex;
     justify-content: end;
     padding: 5px;
-}
-
-.nav-item:hover {
-    a {
-        @extend %animation-menu;
-    }
 }
 
 .nav-item {
@@ -30,6 +23,11 @@ a:hover {
     margin: 0 10px;
     padding: 3px;
     border-radius: 5px;
+    a{
+        &:hover{
+            @extend %animation-menu;
+        }
+    }
 }
 
 .nav-item {
@@ -42,10 +40,9 @@ a:hover {
     background-color: $color-terciario;
     color: $color-fuente;
     border: none;
-}
-
-.btn-primary:hover {
-    @extend %animation-card-button;
+    &:hover{
+        @extend %animation-card-button;
+    }
 }
 
 .modal-body img {
