--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -18,13 +18,13 @@
     background-color: $color-primario;
 }
 
-%grid-container{
+%grid-container {
     display: grid;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
 
-%content-container{
+%content-container {
     padding: 70px 0;
     display: flex;
     flex-direction: row;
@@ -33,7 +33,7 @@
     align-items: center;
 }
 
-%menu{
+%menu {
     position: sticky;
     top: 0px;
     z-index: 1;
@@ -42,8 +42,8 @@
 .enlaces {
     display: flex;
     justify-content: center;
-}
 
-.enlaces:hover {
-@extend %animation-enlaces;
+    &:hover {
+        @extend %animation-enlaces;
+    }
 }
