--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -75,10 +75,8 @@ footer {
         font-size: 15px;
         margin: 5px 40px;
         font-weight: bold;
-    }
-
-    a:hover {
-        @extend %ir-al-inicio;
-
+        &:hover{
+            @extend %ir-al-inicio;
+        }
     }
 }
